k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  # namespace: flask-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: flask

  template:
    metadata:
      labels:
        app: flask

    spec:
      serviceAccountName: flask-ksa   # 👈 IMPORTANT

      containers:

      # ----------------------------
      # Flask App
      # ----------------------------
      - name: flask
        image: IMAGE_PLACEHOLDER

        ports:
        - containerPort: 8080

        volumeMounts:
          - name: secrets-store
            mountPath: "/mnt/secrets"
            readOnly: true

        # ✅ Mount Volume Here

      # ----------------------------
      # Cloud SQL Proxy
      # ----------------------------
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.21.0

        args:
          - "--private-ip"
          - "--structured-logs"
          - "gcp-test-1618-dev:us-central1:gcp-test-1618-sql-dev"

        securityContext:
          runAsNonRoot: true

      # ✅ Define Volume (PVC)
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: flask-pvc
          
      - name: secrets-store
        csi:
          driver: secrets-store-gke.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "gcp-secrets"
