k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask
spec:

  selector:
    app: flask
  ports:
  - name: http
    port: 80
    targetPort: 8080
